[tool.poetry]
name = "gdtools"
version = "0.1.0"
description = "A lib containing various game design tools"
authors = ["Maël Arnaud <mael.arnaud@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true  }
flake8 = "^3.7"
pylint = "^2.3"
sphinx = "^2.2"
pyment = "^0.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
